banner content add

--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
             </div>     
         </nav> 
         <!-- banner design for Fruit Burst -->
+        
         <div class="carousel w-full mx-5 mt-3">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="B8A3-fruit-brust/images/banner1.png" class="w-full" />
+              
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
+                <h2 class="text-7xl text-center justify-center mx-5 mb-1.5 text-white">Exotic tastes at your <br> doorstep</h2>
+                <p class="text-center justify-center mx-5 mb-1.5 text-white">We supply highly quality organic products</p>
+                <button class="text-center justify-center mx-5 mb-1.5 text-white border border-Crimson-300">Shop Now</button>
                 <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
             </div> 
@@ -64,6 +69,9 @@
               <img src="B8A3-fruit-brust/images/banner2.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide1" class="btn btn-circle">❮</a> 
+                <h2 class="text-7xl text-center justify-center mx-5 mb-1.5 text-white">Exotic tastes at your <br> doorstep</h2>
+                <p class="text-center justify-center mx-5 mb-1.5 text-white">We supply highly quality organic products</p>
+                <button class="text-center justify-center mx-5 mb-1.5 text-white border border-Crimson-300">Shop Now</button>
                 <a href="#slide3" class="btn btn-circle">❯</a>
               </div>
             </div> 
@@ -71,6 +79,9 @@
               <img src="B8A3-fruit-brust/images/banner3.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide2" class="btn btn-circle">❮</a> 
+                <h2 class="text-7xl text-center justify-center mx-5 mb-1.5 text-white">Exotic tastes at your <br> doorstep</h2>
+                <p class="text-center justify-center mx-5 mb-1.5 text-white">We supply highly quality organic products</p>
+                <button class="text-center justify-center mx-5 mb-1.5 text-white border border-Crimson-300">Shop Now</button>
                 <a href="#slide4" class="btn btn-circle">❯</a>
               </div>
             </div> 
@@ -78,6 +89,9 @@
               <img src="B8A3-fruit-brust/images/banner4.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide3" class="btn btn-circle">❮</a> 
+                <h2 class="text-7xl text-center justify-center mx-5 mb-1.5 text-white">Exotic tastes at your <br> doorstep</h2>
+                <p class="text-center justify-center mx-5 mb-1.5 text-white">We supply highly quality organic products</p>
+                <button class="text-center justify-center mx-5 mb-1.5 text-white border border-Crimson-300">Shop Now</button>
                 <a href="#slide1" class="btn btn-circle">❯</a>
               </div>
               <div>
