--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <!-- navbar stysle for Fruit Burst  -->
         <nav class="mt-5 mr-20 ml-20">
-            <div  class="navbar bg-base-100 bg-[#F85559;] h-5	text-primary-content rounded-2xl artboard- mt-2 mx-5">
+            <div  class="navbar bg-base-100 bg-[#F85559;] h-5	text-primary-content rounded-full artboard- mt-2 mx-5">
             <div class="navbar-start">
               <div class="dropdown ">
                 <ul tabindex="0" class="menu menu-sm dropdown-content justify-start items-start mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
@@ -39,7 +39,7 @@
                  <a class=" normal-case text-xl"></a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                <ul class="menu menu-horizontal px-1">
+                <ul class="menu text-white menu-horizontal px-1">
                     <li><a>Home</a></li>
                     <li><a>About Us</a></li>
                     <li><a>Shop</a></li>
@@ -52,7 +52,7 @@
 
                 </div>
                 <div class="navbar-end ">
-                <input type="text" placeholder="Search" class="input  w-24 md:w-auto">
+                <input class="rounded-2xl p-2" type="text" placeholder="Search" class="input  w-24 md:w-auto">
                 </div>
             </div>     
         </nav> 
@@ -69,6 +69,28 @@
                 <p class="text-center justify-center mb-1.5 text-white">We supply highly quality organic products</p>
             
                 <button class="text-center ml-40 justify-center items-center mt-7 mx-5 mb-1.5 text-white border rounded-lg p-2 border-[#F85559;] w-24 bg-[#F85559;]">Shop Now</button>
+                <div class="absolute -ml-[100px] mt-500 z-50 -mb-[200px] rounded-lg bg-white text-center flex items-center justify-center mt-10">
+                  <div>
+                  <img src="B8A3-fruit-brust/images/fruit1.png" alt="">
+                  <p class="">Strawberry</p>
+                  </div>
+                  <div>
+                  <img src="B8A3-fruit-brust/images/fruit2.png" alt="">
+                  <p class="">Orange</p>
+                  </div>
+                  <div>
+                  <img src="B8A3-fruit-brust/images/fruit3.png" alt="">
+                  <p class="">Mango</p>
+                  </div>
+                  <div>
+                  <img src="B8A3-fruit-brust/images/fruit4.png" alt="">
+                  <p class="">Strawberry</p>
+                  </div>
+                  <div>
+                  <img src="B8A3-fruit-brust/images/fruit5.png" alt="">
+                  <p class="">Mango</p>
+                  </div>
+                </div>
               </div>
                 <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
@@ -117,31 +139,6 @@
             </div>
           </div>
     </section>
-
-    <Section>
-      <div class="rounded-lg bg-white text-center flex items-center justify-center mt-10">
-        <div>
-        <img src="B8A3-fruit-brust/images/fruit1.png" alt="">
-        <p class="">Strawberry</p>
-        </div>
-        <div>
-        <img src="B8A3-fruit-brust/images/fruit2.png" alt="">
-        <p class="">Orange</p>
-        </div>
-        <div>
-        <img src="B8A3-fruit-brust/images/fruit3.png" alt="">
-        <p class="">Mango</p>
-        </div>
-        <div>
-        <img src="B8A3-fruit-brust/images/fruit4.png" alt="">
-        <p class="">Strawberry</p>
-        </div>
-        <div>
-        <img src="B8A3-fruit-brust/images/fruit5.png" alt="">
-        <p class="">Mango</p>
-        </div>
-      </div>
-    </Section>                 
     </header>
     <main>
       <!-- Deal of the section design -->
@@ -630,7 +627,6 @@
           </div>
             <div>
                 <h2 class="text-2xl">Dedicated Team</h2>
-                <div class="border  w-20 border-[#121212]"></div>
               <div>
                   <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
@@ -648,7 +644,6 @@
           </div>
             <div>
                 <h2 class="text-2xl">Fresh is Best</h2>
-                <div class="border  w-20 border-[#121212]"></div>
               <div>
                   <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
@@ -683,7 +678,6 @@
           </div>
             <div>
                 <h2 class="text-2xl">Gift Certificates</h2>
-                <div class="border  w-20 border-[#121212]"></div>
               <div>
                   <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
@@ -694,14 +688,13 @@
       </div>
       <!-- choose us img -->
       <div>
-        <img class="m-5 " src="B8A3-fruit-brust/images/whychoose1.png" alt="">
+        <img class="m-5 -mr-7 " src="B8A3-fruit-brust/images/whychoose1.png" alt="">
       </div>
       <!-- why choos us right site -->
       <div class="grid">
         <div class="flex items-center">
           <div>
             <h2 class="text-2xl text-right">Dedicated Team</h2>
-            <div class=" w-20 border-[#121212]"></div>
           <div>
               <p class="text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
           </div>
